# mixr

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  meson.build
include/mixr/: config.hpp
include/mixr/base/: StateMachine.hpp
include/mixr/interop/dis/: NetIO.hpp
include/mixr/interop/hla/: Ambassador.hpp  NetIO.hpp  Nib.hpp
include/mixr/interop/rprfom/: RprFom.hpp
include/mixr/models/player/: Player.hpp  Player.inl
include/mixr/simulation/: Station.hpp
include/mixr/terrain/: Terrain.hpp
scripts/: build.sh  deploy.sh  deps.sh  install.sh
src/: CMakeLists.txt  meson.build
src/base/: CMakeLists.txt  StateMachine.cpp  meson.build
src/interop/: CMakeLists.txt  meson.build
src/interop/common/: meson.build
src/interop/dis/: meson.build
src/interop/hla/: meson.build
src/interop/rprfom/: meson.build
src/linearsystem/: CMakeLists.txt  meson.build
src/linkage/: CMakeLists.txt  meson.build
src/models/: CMakeLists.txt  Tdb.cpp  meson.build
src/models/dynamics/: JSBSimModel.cpp
src/models/player/weapon/: Bomb.cpp
src/recorder/: CMakeLists.txt  DataRecordHandle.cpp  DataRecorder.cpp  FileReader.cpp  FileWriter.cpp  InputHandler.cpp  NetInput.cpp  NetOutput.cpp  OutputHandler.cpp  PrintPlayer.cpp  PrintSelected.cpp  TabPrinter.cpp  meson.build
src/recorder/proto/: CMakeLists.txt  DataRecord.proto  meson.build
src/simulation/: CMakeLists.txt  meson.build
src/terrain/: CMakeLists.txt  Terrain.cpp  meson.build
subprojects/: .gitignore
test_pkg/: CMakeLists.txt  conanfile.py
test_pkg/src/: example.cpp
