source_files = [
    './Emission.cpp',
    './SynchronizedState.cpp',
    './Signatures.cpp',
    './Message.cpp',
    './WorldModel.cpp',
    './SimAgent.cpp',
    './SensorMsg.cpp',
    './IrQueryMsg.cpp',
    './MultiActorAgent.cpp',
    './factory.cpp',
    './AircraftIrSignature.cpp',
    './Track.cpp',
    './Image.cpp',
    './Designator.cpp',
    './TargetData.cpp',
    './IrShapes.cpp',
    './IrSignature.cpp',
    './Tdb.cpp',
    './Actions.cpp',
    './dynamics/DynamicsModel.cpp',
    './dynamics/AerodynamicsModel.cpp',
    './dynamics/SpaceDynamicsModel.cpp',
    './dynamics/RacModel.cpp',
    './dynamics/LaeroModel.cpp',
    './dynamics/JSBSimModel.cpp',
    './system/System.cpp',
    './system/Radio.cpp',
    './system/SimpleStoresMgr.cpp',
    './system/Datalink.cpp',
    './system/Jammer.cpp',
    './system/Stores.cpp',
    './system/FuelTank.cpp',
    './system/Rwr.cpp',
    './system/IrSeeker.cpp',
    './system/StabilizingGimbal.cpp',
    './system/StoresMgr.cpp',
    './system/Radar.cpp',
    './system/Gimbal.cpp',
    './system/IrSensor.cpp',
    './system/Autopilot.cpp',
    './system/ScanGimbal.cpp',
    './system/CommRadio.cpp',
    './system/CollisionDetect.cpp',
    './system/Iff.cpp',
    './system/RfSystem.cpp',
    './system/SensorMgr.cpp',
    './system/Antenna.cpp',
    './system/AvionicsPod.cpp',
    './system/Pilot.cpp',
    './system/Guns.cpp',
    './system/RfSensor.cpp',
    './system/MergingIrSensor.cpp',
    './system/Sar.cpp',
    './system/OnboardComputer.cpp',
    './system/IrSystem.cpp',
    './system/ExternalStore.cpp',
    './system/trackmanager/AngleOnlyTrackManager.cpp',
    './system/trackmanager/AirTrkMgr.cpp',
    './system/trackmanager/RwrTrkMgr.cpp',
    './system/trackmanager/TrackManager.cpp',
    './system/trackmanager/GmtiTrkMgr.cpp',
    './system/trackmanager/AirAngleOnlyTrkMgr.cpp',
    './system/trackmanager/AirAngleOnlyTrkMgrPT.cpp',
    './sensor/Tws.cpp',
    './sensor/Stt.cpp',
    './sensor/Gmti.cpp',
    './environment/IrAtmosphere.cpp',
    './environment/IrAtmosphere1.cpp',
    './environment/AbstractAtmosphere.cpp',
    './navigation/Gps.cpp',
    './navigation/Route.cpp',
    './navigation/Steerpoint.cpp',
    './navigation/Bullseye.cpp',
    './navigation/Navigation.cpp',
    './navigation/Ins.cpp',
    './player/Building.cpp',
    './player/Player.cpp',
    './player/LifeForm.cpp',
    './player/Ship.cpp',
    './player/effect/Chaff.cpp',
    './player/effect/Flare.cpp',
    './player/effect/Decoy.cpp',
    './player/effect/Effect.cpp',
    './player/weapon/Bomb.cpp',
    './player/weapon/Aam.cpp',
    './player/weapon/Bullet.cpp',
    './player/weapon/Sam.cpp',
    './player/weapon/AbstractWeapon.cpp',
    './player/weapon/Missile.cpp',
    './player/weapon/Agm.cpp',
    './player/air/Aircraft.cpp',
    './player/air/Helicopter.cpp',
    './player/air/AirVehicle.cpp',
    './player/air/UnmannedAirVehicle.cpp',
    './player/ground/GroundVehicle.cpp',
    './player/ground/Tank.cpp',
    './player/ground/Artillery.cpp',
    './player/ground/GroundStationUav.cpp',
    './player/ground/ArmoredVehicle.cpp',
    './player/ground/SamVehicle.cpp',
    './player/ground/GroundStationRadar.cpp',
    './player/ground/WheeledVehicle.cpp',
    './player/ground/GroundStation.cpp',
    './player/space/BoosterSpaceVehicle.cpp',
    './player/space/MannedSpaceVehicle.cpp',
    './player/space/UnmannedSpaceVehicle.cpp',
    './player/space/SpaceVehicle.cpp',
]

mixr_models = library(
    'mixr_models',
    source_files,
    include_directories: public_headers,
    dependencies: [
        mixr_base_dep,
        mixr_simulation_dep,
        mixr_terrain_dep,
        jsbsim_dep
    ],
    install : true,
    install_dir: get_option('prefix') / 'lib',
)

mixr_models_dep = declare_dependency(
    link_with : mixr_models
)

pkg.generate(mixr_models, name : 'mixr-models')
